--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "Bosch",
   "license": "MIT",
   "devDependencies": {
+    "connect": "^3.6.6",
+    "request-ip": "^2.1.3",
     "websocket": "^1.0.28"
   }
 }
