--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "devDependencies": {
     "connect": "^3.6.6",
+    "mongodb": "^3.1.10",
     "request-ip": "^2.1.3",
     "websocket": "^1.0.28"
   }
