--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "author": "Bosch",
   "license": "MIT",
   "devDependencies": {
+    "bcrypt": "^3.0.3",
     "connect": "^3.6.6",
+    "cookie-parser": "^1.4.3",
+    "express-session": "^1.15.6",
     "mongodb": "^3.1.10",
     "request-ip": "^2.1.3",
     "websocket": "^1.0.28"
