--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "bcrypt": "^3.0.3",
     "connect": "^3.6.6",
+    "connect-mongo": "^2.0.3",
     "cookie-parser": "^1.4.3",
     "express-session": "^1.15.6",
     "mongodb": "^3.1.10",
