--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "author": "Bosch",
   "license": "MIT",
   "devDependencies": {
-    "bcrypt": "^3.0.3",
+    "bcrypt": "^3.0.6",
     "connect": "^3.6.6",
     "connect-mongo": "^2.0.3",
     "cookie-parser": "^1.4.3",
@@ -22,5 +22,8 @@
     "mongodb": "^3.1.10",
     "request-ip": "^2.1.3",
     "websocket": "^1.0.28"
+  },
+  "dependencies": {
+    "node-gyp": "^9.3.1"
   }
 }
